--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-    "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }],
+    
     "version": 2,
     "builds": [
         {
@@ -7,5 +7,15 @@
             "use": "@now/node"
         }
     ],
-    
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "index.js"
+        },
+        {
+            "src": "/api(.*)",
+            "dest": "index.js"
+        }
+        
+    ]
 }
